--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
 
 <head>
-  <!-- <link rel="stylesheet" href="style.css"> -->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -36,7 +35,7 @@
     .flabHeader {
       position: relative;
       padding-top: 25px;
-      background-color: #ddd;
+      background-color: #86c3ee;
       padding-bottom: 150px;
       border-radius: 10px;
       max-width: 580px;
@@ -56,13 +55,14 @@
     .flabLogo img {
       width: 100%;
       max-width: 100%;
+      font-size: 25px;
     }
 
     .flabHeaderLink {
       position: absolute;
       right: 30px;
       bottom: 150px;
-      color: #000000;
+      color: #000;
       font-size: 13px;
     }
 
@@ -205,6 +205,7 @@
       margin-right: 40px;
       text-align: left;
       display: inline-block;
+      vertical-align: top;
     }
 
     .flabFooterColCaption {
@@ -352,15 +353,15 @@
           <ul>
             <li>
               Facebook:
-              <a href="mailto:flab io"> flab io</a>
+              <a href="https://www.facebook.com/"> flab io</a>
             </li>
             <li>
               Twitter:
-              <a href="mailto::@flab_io"> @flab_io</a>
+              <a href="https://twitter.com/?lang=ru"> @flab_io</a>
             </li>
             <li>
               Skype:
-              <a href="mailto::info@flabio.ru"> info@flabio.ru</a>
+              <a href="skype:info@flabio.ru"> info@flabio.ru</a>
             </li>
           </ul>
         </li>
@@ -372,6 +373,10 @@
             <li>
               тел:
               <a href="tel:996707283293">+996 (707) 28 32 93</a>
+            </li>
+            <li>
+              Email:
+              <a href="mailto:aidana.e@flabio.kg"> aidana.e@flabio.kg</a>
             </li>
           </ul>
         </li>
