--- a/rus.html
+++ b/rus.html
@@ -11,13 +11,13 @@
 <body style="margin:0;padding:0">
   <style></style>
   <div class="flabContainer" style="background-color:#e7eaeb;font-family:sans-serif;padding-bottom:30px;padding-top:30px">
-    <div class="flabHeader" style="background-color:#ddd;border:1px solid #eee;border-radius:10px;margin:auto;margin-bottom:-150px;max-width:580px;padding-bottom:150px;padding-top:25px;position:relative;width:100%">
+    <div class="flabHeader" style="background-color:#86c3ee;border:1px solid #eee;border-radius:10px;margin:auto;margin-bottom:-150px;max-width:580px;padding-bottom:150px;padding-top:25px;position:relative;width:100%">
       <div class="flabLogo" style="display:inline-block;max-width:130px;padding-left:30px;width:100%">
         <a href="#">
-          <img src="http://screen.flabio.tech/email/logo.png" alt="Flabio" style="max-width:100%;width:100%; font-size: 25px;";>
+          <img src="http://screen.flabio.tech/email/logo.png" alt="" style="font-size:25px;max-width:100%;width:100%">
         </a>
       </div>
-      <a href="#" class="flabHeaderLink" style="bottom:150px;color:#000;font-size:13px;position:absolute;right:30px">открыть в браузере</a>
+      <a href="http://html.flabio.kg/flabio/rus.html" class="flabHeaderLink" style="bottom:150px;color:#000;font-size:13px;position:absolute;right:30px">открыть в браузере</a>
     </div>
     <div class="flabBaner" style="background-color:#121d3d;background-image:url(http://screen.flabio.tech/email/emaildark.png);background-repeat:no-repeat;border-radius:10px;color:#fff;height:280px;margin:auto;margin-top:15px;max-width:550px;position:relative;text-align:center;width:100%;z-index:1">
       <p style="font-size:20px;padding-top:120px">Нужна информация по разработке сайта? Заходите!</p>
@@ -28,8 +28,7 @@
         сотрудничества с нацеленностью на долгие годы совместной работы. У нас небольшая команда. Состоит из 15 человек.
         У нас есть большой опыт и знания.</p>
       <p class="flabText" style="font-size:15px;margin-bottom:35px">Мы уверены, что создадим оптимальные условия, при которых будет выгодно работать и Вам, и нам.</p>
-      <p class="flabCaption"
-        style="margin-bottom:30px">
+      <p class="flabCaption" style="margin-bottom:30px">
         <b>Наши навыки:</b>
       </p>
       <ul style="margin:0;padding:0">
@@ -108,28 +107,31 @@
     </div>
     <div class="flabFooter" style="background-color:#121d3d;border-radius:10px;margin:auto;margin-top:-70px;max-width:580px;min-height:150px;text-align:center;width:100%">
       <ul style="margin:0;padding:0">
-        <li class="flabFooterCol" style="vertical-align: top; display:inline-block;font-size:14px;list-style:none;margin:auto;margin-bottom:20px;margin-right:40px;padding-left:15px;position:relative;text-align:left">
+        <li class="flabFooterCol" style="display:inline-block;font-size:14px;list-style:none;margin:auto;margin-bottom:20px;margin-right:40px;padding-left:15px;position:relative;text-align:left;vertical-align:top">
           <p class="flabFooterColCaption" style="color:#fff;font-size:18px;margin-bottom:30px;position:relative;text-transform:uppercase">
             <span style="color:#4fb5fd;margin-right:10px">|</span> Связаться с нами:</p>
           <ul style="margin:0;padding:0;padding-bottom:0">
             <li style="color:#aeabab;font-size:14px;list-style:none;margin-bottom:20px;position:relative">Facebook:
-              <a href="mailto:flab io" style="color:#fff;text-decoration:none">flab io</a>
+              <a href="https://www.facebook.com/" style="color:#fff;text-decoration:none">flab io</a>
             </li>
             <li style="color:#aeabab;font-size:14px;list-style:none;margin-bottom:20px;position:relative">Twitter:
-              <a href="mailto::@flab_io" style="color:#fff;text-decoration:none">@flab_io</a>
+              <a href="https://twitter.com/?lang=ru" style="color:#fff;text-decoration:none">@flab_io</a>
             </li>
             <li style="color:#aeabab;font-size:14px;list-style:none;margin-bottom:20px;position:relative">Skype:
-              <a href="mailto::info@flabio.ru" style="color:#fff;text-decoration:none">info@flabio.ru</a>
+              <a href="skype:info@flabio.ru" style="color:#fff;text-decoration:none">info@flabio.ru</a>
             </li>
           </ul>
         </li>
-        <li class="flabFooterCol" style="vertical-align: top; display:inline-block;font-size:14px;list-style:none;margin:auto;margin-bottom:20px;margin-right:40px;padding-left:15px;position:relative;text-align:left">
+        <li class="flabFooterCol" style="display:inline-block;font-size:14px;list-style:none;margin:auto;margin-bottom:20px;margin-right:40px;padding-left:15px;position:relative;text-align:left;vertical-align:top">
           <p class="flabFooterColCaption" style="color:#fff;font-size:18px;margin-bottom:30px;position:relative;text-transform:uppercase">
             <span style="color:#4fb5fd;margin-right:10px">|</span> Контакты</p>
           <ul style="margin:0;padding:0;padding-bottom:0">
             <li style="color:#aeabab;font-size:14px;list-style:none;margin-bottom:20px;position:relative">Кыргызская Республика, Бишкек</li>
             <li style="color:#aeabab;font-size:14px;list-style:none;margin-bottom:20px;position:relative">тел:
               <a href="tel:996707283293" style="color:#fff;text-decoration:none">+996 (707) 28 32 93</a>
+            </li>
+            <li style="color:#aeabab;font-size:14px;list-style:none;margin-bottom:20px;position:relative">Email:
+              <a href="mailto:aidana.e@flabio.kg" style="color:#fff;text-decoration:none">aidana.e@flabio.kg</a>
             </li>
           </ul>
         </li>
